<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterParts">

    <TextView
        android:id="@+id/register_parts_title"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/register_parts_title"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/register_parts_input_scroll"
        android:layout_width="match_parent"
        android:layout_height="624dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_parts_title"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:paddingEnd="15dp">

            <!--    部品番号     -->
            <LinearLayout
                android:id="@+id/register_parts_number"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parts_number"
                    android:textSize="18sp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_register_number"
                    android:inputType="number"/>
            </LinearLayout>

            <!--    部品名     -->
            <LinearLayout
                android:id="@+id/register_parts_name"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parts_name"
                    android:textSize="18sp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_register_name"
                    android:inputType="text"/>
            </LinearLayout>

            <!--    在庫数量     -->
            <LinearLayout
                android:id="@+id/register_parts_used"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parts_used"
                    android:textSize="18sp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_register_current_number"
                    android:inputType="number"/>
            </LinearLayout>

            <!--    ロット     -->
            <LinearLayout
                android:id="@+id/edit_parts_lot"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parts_lot"
                    android:textSize="18sp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_register_lot"
                    android:inputType="number"/>
            </LinearLayout>

            <!--    リードタイム     -->
            <LinearLayout
                android:id="@+id/edit_parts_readTime"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingTop="20dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parts_readTime"
                    android:textSize="18sp" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_register_readTime"
                    android:inputType="number"/>
            </LinearLayout>

            <!--    ボタン部分     -->
            <LinearLayout
                android:id="@+id/register_buttons"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#3F51B5"
                    android:textColor="#FFFFFF"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/register_button" />
                <Button
                    android:id="@+id/register_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#3F51B5"
                    android:textColor="#FFFFFF"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/back_button"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>