<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchParts">

    <TextView
        android:id="@+id/search_parts_title"
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/search_parts_title"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--  在庫検索、結果部分  -->
    <LinearLayout
        android:id="@+id/search_input_result_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227">
        <LinearLayout
            android:id="@+id/search_input_space"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/search_number_msg" />
            <EditText
                android:id="@+id/search_id_input"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingTop="1dp"
                android:hint="@string/search_hint_message"
                android:inputType="number" />
            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/search_button" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_result_space"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_input_space"
            app:layout_constraintVertical_bias="0.1" >
            <TextView
                android:id="@+id/search_register"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/search_register" />
            <TextView
                android:id="@+id/search_count_number"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="9"
                android:gravity="center" />
            <TextView
                android:id="@+id/search_count"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/search_count"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <!--  検索一覧部分  -->
    <LinearLayout
        android:id="@+id/parts_list_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_input_result_space"
        app:layout_constraintVertical_bias="0.4"
        android:orientation="vertical" >
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:gravity="center"
                android:text="@string/search_title_id"
                android:textSize="18sp" />
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:gravity="center"
                android:text="@string/search_title_parts_name"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:gravity="center"
                android:text="@string/search_title_lot"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:gravity="center"
                android:text="@string/search_title_readTime"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:gravity="center"
                android:text="@string/search_title_current_number"
                android:textSize="18sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_style"
                android:text="@string/search_title_edit"
                android:gravity="center"
                android:textSize="18sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/zaiko_list"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:entries="@array/Array_parts_name" />
    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:gravity="center"
        android:text="@string/back_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

</androidx.constraintlayout.widget.ConstraintLayout>